[tool.poetry]
name = "climbing-flask"
version = "0.1.0"
description = ""
authors = ["Yan Machulski"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
gevent = "^22.10.2"
Flask-Cors = "^3.0.10"
SQLAlchemy = "^1.4.46"
passlib = "^1.7.4"
Flask-Login = "^0.6.2"
Flask-HTTPAuth = "^4.7.0"
validate_email = "^1.3"
psycopg2 = "^2.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
